Quick correction with the spacing in the Contact page.

--- a/src/app/contact/contact/contact.component.scss
+++ b/src/app/contact/contact/contact.component.scss
@@ -19,8 +19,9 @@
         width: 100%;
         height: 100%;
         display: flex;
-        justify-content: space-evenly;
+        justify-content: center;
         align-items: center;
+        gap: 75px;
 
         & .link {
             padding: 10px 15px;
@@ -63,7 +64,6 @@
 
         & .link-container {
             flex-direction: column;
-            justify-content: center;
             gap: 50px;
         }
     }
